--- a/cookie_consent/templates/cookie_consent/includes/consent.html
+++ b/cookie_consent/templates/cookie_consent/includes/consent.html
@@ -2,7 +2,7 @@
 <article class="cookie-consent">
     <header><h5>Cookie consent</h5><button class="close">Close</button></header>
     <section>
-        <p>We are using cookies to make this website fully functional.</p>
+        <p>{{ consent_text|default:"We are using cookies to make this website fully functional." }}</p>
         <!-- <p>If you understand what HTTP cookies are, you probably would accept their usage by clicking the button in the right-below corner</p> -->
         <!-- <p>If you are not sure, close this notification (but you will be forced to close it every time you visit this web-site until you accept)</p> -->
     </section>
